tests/scan/fixtures/validation/negative/clean_cargo_clean_validator_crate/src/lib.rs
//! A clean Rust crate: clean_validator_crate.

pub fn hello() -> &'static str { "hello" }
